<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".CricketActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <!-- For Team A -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/text_style_for_activity_games"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/team_a"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/text_style_for_activity_games"
                    android:text="@string/zero"
                    android:textSize="36sp" />

                <TextView
                    style="@style/text_style_for_activity_games"
                    android:text="@string/f_slash"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/team_a_out"
                    style="@style/text_style_for_activity_games"
                    android:text="@string/zero"
                    android:textSize="36sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_for_activity_games"
                    android:text="@string/over"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/overs_team_a"
                    style="@style/text_style_for_activity_games"
                    android:text="@string/nine"
                    android:textSize="24sp" />

                <TextView
                    style="@style/text_style_for_activity_games"
                    android:text="@string/period"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/balls_team_a"
                    style="@style/text_style_for_activity_games"
                    android:text="@string/six"
                    android:textSize="24sp" />

            </LinearLayout>


            <Button
                style="@style/button_style_for_activity_games"
                android:background="@drawable/g_button"
                android:onClick="addSixForTeamA"
                android:text="@string/six_run"
                android:textAlignment="center" />

            <Button
                style="@style/button_style_for_activity_games"
                android:background="@drawable/s_button"
                android:onClick="addFourForTeamA"
                android:text="@string/four_run"
                android:textAlignment="center" />

            <Button
                style="@style/button_style_for_activity_games"
                android:background="@drawable/b_button"
                android:onClick="addOneForTeamA"
                android:text="@string/one_run"
                android:textAlignment="center" />

            <Button
                style="@style/button_style_for_activity_games"
                android:background="@drawable/d_button"
                android:onClick="oneOutFromTeamA"
                android:text="@string/out"
                android:textAlignment="center" />

            <Button
                style="@style/button_style_for_activity_games"
                android:background="@drawable/r_button"
                android:onClick="resetScoreOfTeamA"
                android:text="@string/reset"
                android:textAlignment="center" />

        </LinearLayout>

        <!-- For Team B -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/text_style_for_activity_games"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/team_b"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/text_style_for_activity_games"
                    android:text="@string/zero"
                    android:textSize="36sp" />

                <TextView
                    style="@style/text_style_for_activity_games"
                    android:text="@string/f_slash"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/team_b_out"
                    style="@style/text_style_for_activity_games"
                    android:text="@string/zero"
                    android:textSize="36sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_for_activity_games"
                    android:text="@string/over"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/overs_team_b"
                    style="@style/text_style_for_activity_games"
                    android:text="@string/nine"
                    android:textSize="24sp" />

                <TextView
                    style="@style/text_style_for_activity_games"
                    android:text="@string/period"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/balls_team_b"
                    style="@style/text_style_for_activity_games"
                    android:text="@string/six"
                    android:textSize="24sp" />

            </LinearLayout>


            <Button
                style="@style/button_style_for_activity_games"
                android:background="@drawable/g_button"
                android:onClick="addSixForTeamB"
                android:text="@string/six_run"
                android:textAlignment="center" />

            <Button
                style="@style/button_style_for_activity_games"
                android:background="@drawable/s_button"
                android:onClick="addFourForTeamB"
                android:text="@string/four_run"
                android:textAlignment="center" />

            <Button
                style="@style/button_style_for_activity_games"
                android:background="@drawable/b_button"
                android:onClick="addOneForTeamB"
                android:text="@string/one_run"
                android:textAlignment="center" />

            <Button
                style="@style/button_style_for_activity_games"
                android:background="@drawable/d_button"
                android:onClick="oneOutFromTeamB"
                android:text="@string/out"
                android:textAlignment="center" />

            <Button
                style="@style/button_style_for_activity_games"
                android:background="@drawable/r_button"
                android:onClick="resetScoreOfTeamB"
                android:text="@string/reset"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>